--- a/c64_.cfg
+++ b/c64_.cfg
@@ -11,10 +11,9 @@ MEMORY {
     ZP:       file = "", define = yes, start = $0002,           size = $001A;
     LOADADDR: file = %O,               start = %S - 2,          size = $0002;
     HEADER:   file = %O, define = yes, start = %S,              size = $000D;
-    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__;
+    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $1000;
     BSS:      file = "",               start = __ONCE_RUN__,    size = __HIMEM__ - __STACKSIZE__ - __ONCE_RUN__;
-    GFXDATA:     file = %O, define = yes, start = $7000, size = $0800;
-    
+    GFXDATA:  start = $C000, size = $0800, file = %O, define = yes;
     }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
@@ -22,11 +21,10 @@ SEGMENTS {
     EXEHDR:   load = HEADER,   type = ro;
     STARTUP:  load = MAIN,     type = ro;
     LOWCODE:  load = MAIN,     type = ro,  optional = yes;
-    GFXDATA: load = GFXDATA,  type = rw;
-    
     CODE:     load = MAIN,     type = ro;
     RODATA:   load = MAIN,     type = ro;
     DATA:     load = MAIN,     type = rw;
+    GFXDATA:  load = GFXDATA,  type = rw;    
     INIT:     load = MAIN,     type = rw;
     ONCE:     load = MAIN,     type = ro,  define   = yes;
     BSS:      load = BSS,      type = bss, define   = yes;
