--- a/c64_.cfg
+++ b/c64_.cfg
@@ -11,9 +11,10 @@ MEMORY {
     ZP:       file = "", define = yes, start = $0002,           size = $001A;
     LOADADDR: file = %O,               start = %S - 2,          size = $0002;
     HEADER:   file = %O, define = yes, start = %S,              size = $000D;
-    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $1000, fill = yes;
+    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $2000, fill = yes;
     BSS:      file = "",               start = __ONCE_RUN__,    size = __HIMEM__ - __STACKSIZE__ - __ONCE_RUN__;
-    GFXDATA:  start = $C000, size = $0800, file = %O, define = yes;
+    MAPDATA:  file = %O, define = yes, start = $B000, size = $1000, fill = yes, fillval = $aa;
+    GFXDATA:  file = %O, define = yes, start = $C000, size = $1000, fill = yes, fillval = $aa;
     }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
@@ -24,10 +25,11 @@ SEGMENTS {
     CODE:     load = MAIN,     type = ro;
     RODATA:   load = MAIN,     type = ro;
     DATA:     load = MAIN,     type = rw;
-    GFXDATA:  load = GFXDATA,  type = rw;    
     INIT:     load = MAIN,     type = rw;
     ONCE:     load = MAIN,     type = ro,  define   = yes;
     BSS:      load = BSS,      type = bss, define   = yes;
+    MAPDATA:  load = MAPDATA,  type = rw;
+    GFXDATA:  load = GFXDATA,  type = rw;
 }
 FEATURES {
     CONDES: type    = constructor,
