updated from 8bitworkshop.com

--- a/c64_.cfg
+++ b/c64_.cfg
@@ -14,7 +14,8 @@ MEMORY {
     MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $2000, fill = yes;
     BSS:      file = "",               start = __ONCE_RUN__,    size = __HIMEM__ - __STACKSIZE__ - __ONCE_RUN__;
     MAPDATA:  file = %O, define = yes, start = $B000, size = $1000, fill = yes, fillval = $aa;
-    GFXDATA:  file = %O, define = yes, start = $C000, size = $1000, fill = yes, fillval = $aa;
+    GFXDATA:  file = %O, define = yes, start = $C000, size = $0800, fill = yes, fillval = $aa;
+    SCREENDATA:  file = %O, define = yes, start = $C800, size = $0800, fill = yes, fillval = $44;
     }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
@@ -30,6 +31,7 @@ SEGMENTS {
     BSS:      load = BSS,      type = bss, define   = yes;
     MAPDATA:  load = MAPDATA,  type = rw;
     GFXDATA:  load = GFXDATA,  type = rw;
+    SCREENDATA:  load = SCREENDATA,  type = rw;
 }
 FEATURES {
     CONDES: type    = constructor,
