updated from 8bitworkshop.com

--- a/c64_.cfg
+++ b/c64_.cfg
@@ -16,6 +16,7 @@ MEMORY {
     MAPDATA:  file = %O, define = yes, start = $B000, size = $1000, fill = yes, fillval = $aa;
     GFXDATA:  file = %O, define = yes, start = $C000, size = $0800, fill = yes, fillval = $aa;
     SCREENDATA:  file = %O, define = yes, start = $C800, size = $0800, fill = yes, fillval = $44;
+    COLORDATA:  file = %O, define = yes, start = $D800, size = $0400, fill = yes;
     }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
@@ -32,6 +33,7 @@ SEGMENTS {
     MAPDATA:  load = MAPDATA,  type = rw;
     GFXDATA:  load = GFXDATA,  type = rw;
     SCREENDATA:  load = SCREENDATA,  type = rw;
+    COLORDATA:  load = COLORDATA,  type = rw;
 }
 FEATURES {
     CONDES: type    = constructor,
