--- a/c64_1.cfg
+++ b/c64_1.cfg
@@ -11,12 +11,10 @@ MEMORY {
     ZP:       file = "", define = yes, start = $0002,           size = $001A;
     LOADADDR: file = %O,               start = %S - 2,          size = $0002;
     HEADER:   file = %O, define = yes, start = %S,              size = $000D;
-    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $2000, fill = yes;
+    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $1000, fill = yes;
     BSS:      file = "",               start = __ONCE_RUN__,    size = __HIMEM__ - __STACKSIZE__ - __ONCE_RUN__;
-    MAPDATA:  file = %O, define = yes, start = $B000, size = $1000, fill = yes, fillval = $aa;
-    SIDRAM:  file = %O, define = yes, start = $C000, size = $0800, fill = yes, fillval = $aa;
-    CHARRAM:  file = %O, define = yes, start = $C800, size = $0800, fill = yes, fillval = $44;
-    COLORDATA:  file = %O, define = yes, start = $D800, size = $0400, fill = yes;
+    HIGHMEMORY:     file = %O, define = yes, start = $C000, size = $1000, fill = yes;
+    
     }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
@@ -30,10 +28,8 @@ SEGMENTS {
     INIT:     load = MAIN,     type = rw;
     ONCE:     load = MAIN,     type = ro,  define   = yes;
     BSS:      load = BSS,      type = bss, define   = yes;
-    MAPDATA:  load = MAPDATA,  type = rw;
-    SIDRAM:  load = SIDRAM,  type = rw;
-    CHARRAM:  load = CHARRAM,  type = rw;
-    COLORDATA:  load = COLORDATA,  type = rw;
+    SIDRAM:  load = HIGHMEMORY,  type = rw, start = $C000;
+    CHARRAM:  load = HIGHMEMORY,  type = rw, start = $C800;
 }
 FEATURES {
     CONDES: type    = constructor,
