--- a/c64_1.cfg
+++ b/c64_1.cfg
@@ -13,7 +13,7 @@ MEMORY {
     HEADER:   file = %O, define = yes, start = %S,              size = $000D;
     MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $1000, fill = yes;
     BSS:      file = "",               start = __ONCE_RUN__,    size = __HIMEM__ - __STACKSIZE__ - __ONCE_RUN__;
-    HIGHMEMORY:     file = %O, define = yes, start = $C000, size = $1000, fill = yes;
+    HIGHMEMORY:     file = %O, define = yes, start = $C000, size = $1000, fill = no;
     
     }
 SEGMENTS {
