updated from 8bitworkshop.com

--- a/c64_1.cfg
+++ b/c64_1.cfg
@@ -13,7 +13,7 @@ MEMORY {
     HEADER:   file = %O, define = yes, start = %S,              size = $000D;
     MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $1000, fill = yes;
     BSS:      file = "",               start = __ONCE_RUN__,    size = __HIMEM__ - __STACKSIZE__ - __ONCE_RUN__;
-    HIGHMEMORY:     file = %O, define = yes, start = $C000, size = $4000, fill = no;
+    HIGHMEMORY:     file = %O, define = yes, start = $C000, size = $1000, fill = yes;
     
     }
 SEGMENTS {
@@ -29,7 +29,7 @@ SEGMENTS {
     ONCE:     load = MAIN,     type = ro,  define   = yes;
     BSS:      load = BSS,      type = bss, define   = yes;
     SIDRAM:  load = HIGHMEMORY,  type = rw, start = $C000;
-    CHARRAM:  load = HIGHMEMORY,  type = rw, start = $E000;
+    CHARRAM:  load = HIGHMEMORY,  type = rw, start = $C800;
 }
 FEATURES {
     CONDES: type    = constructor,
