updated from 8bitworkshop.com

--- a/c64_1.cfg
+++ b/c64_1.cfg
@@ -11,9 +11,9 @@ MEMORY {
     ZP:       file = "", define = yes, start = $0002,           size = $001A;
     LOADADDR: file = %O,               start = %S - 2,          size = $0002;
     HEADER:   file = %O, define = yes, start = %S,              size = $000D;
-    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $1000, fill = yes;
+    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $1800, fill = yes;
     BSS:      file = "",               start = __ONCE_RUN__,    size = __HIMEM__ - __STACKSIZE__ - __ONCE_RUN__;
-    HIGHMEMORY:     file = %O, define = yes, start = $C000, size = $1000, fill = yes;
+    HIGHMEMORY:     file = %O, define = yes, start = $B800, size = $1800, fill = yes;
     
     }
 SEGMENTS {
@@ -28,8 +28,8 @@ SEGMENTS {
     INIT:     load = MAIN,     type = rw;
     ONCE:     load = MAIN,     type = ro,  define   = yes;
     BSS:      load = BSS,      type = bss, define   = yes;
-    SIDRAM:  load = HIGHMEMORY,  type = rw, start = $C000;
-    CHARRAM:  load = HIGHMEMORY,  type = rw, start = $C800;
+    SIDRAM:  load = HIGHMEMORY,  type = rw, start = $B800;
+    CHARRAM:  load = HIGHMEMORY,  type = rw, start = $C000;
 }
 FEATURES {
     CONDES: type    = constructor,
