--- a/c64_1.cfg
+++ b/c64_1.cfg
@@ -11,10 +11,8 @@ MEMORY {
     ZP:       file = "", define = yes, start = $0002,           size = $001A;
     LOADADDR: file = %O,               start = %S - 2,          size = $0002;
     HEADER:   file = %O, define = yes, start = %S,              size = $000D;
-    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $1800, fill = yes;
+    MAIN:     file = %O, define = yes, start = __HEADER_LAST__, size = __HIMEM__ - __HEADER_LAST__ - $1000, fill = no;
     BSS:      file = "",               start = __ONCE_RUN__,    size = __HIMEM__ - __STACKSIZE__ - __ONCE_RUN__;
-    HIGHMEMORY:     file = %O, define = yes, start = $B800, size = $1800, fill = yes;
-    
     }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
@@ -28,9 +26,7 @@ SEGMENTS {
     INIT:     load = MAIN,     type = rw;
     ONCE:     load = MAIN,     type = ro,  define   = yes;
     BSS:      load = BSS,      type = bss, define   = yes;
-    SIDRAM:  load = HIGHMEMORY,  type = rw, start = $B800;
-    CHARRAM:  load = HIGHMEMORY,  type = rw, start = $C000;
-}
+    }
 FEATURES {
     CONDES: type    = constructor,
             label   = __CONSTRUCTOR_TABLE__,
